fixed y axis tick label cutoff for large tick values

--- a/src/static/scss/components/_section-nav.scss
+++ b/src/static/scss/components/_section-nav.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	background-color: palette-get(na-black-10);
 	height: 72px;
-	z-index: 100;
+	z-index: 9;
 
 	&.fixed {
 		position: fixed;
